--- a/myproject/static/css/style.css
+++ b/myproject/static/css/style.css
@@ -94,3 +94,17 @@ a:hover {
 .errorlist li::marker {
     content: '🚨 ';
 }
+
+.logout {
+    display: inline-block;
+}
+
+.logout-button {
+    font-size: 2.5rem;
+    background-color: black;
+    border: none;
+}
+
+.logout-button:hover {
+    opacity: .85;
+}
