--- a/myproject/templates/layout.html
+++ b/myproject/templates/layout.html
@@ -23,12 +23,30 @@
         <a href="{% url 'posts:list' %}">
             <span role="img" aria-label="Posts" title="Posts">📰</span>
         </a> | 
-        <a href="{% url 'users:register' %}">
-            <span role="img" aria-label="User Registration" title="User Registration">🚀</span>
-        </a> |
-        <a href="{% url 'users:login' %}">
-            <span role="img" aria-label="User Login" title="User Login">🔒</span>
-        </a>
+
+        {% if not user.is_authenticated %}
+            <a href="{% url 'users:register' %}">
+                <span role="img" aria-label="User Registration" title="User Registration">🚀</span>
+            </a> |
+    
+            <a href="{% url 'users:login' %}">
+                <span role="img" aria-label="User Login" title="User Login">🔒</span>
+            </a> |
+
+        {% else %}
+
+            <a href="{% url 'posts:new-post' %}">
+                <span role="img" aria-label="New Post" title="New Post">🆕</span>
+            </a> |     
+        
+            <form class="logout" action="{% url 'users:logout' %}" method="post">
+                {% csrf_token %}
+                <button class="logout-button" aria-label="user-logout" title="user logout">🙋‍♀️</button>
+            </form>
+
+        {% endif %}
+
+
     </nav>
     <main>
         {% block content %}
